aula 05: começando frontend com bootstrap

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -11,7 +11,7 @@
 
     <p th:text="'Olá, ' + ${userName} + '!'"></p>
 
-    <form th:action="@{/}" method="get">
+    <form th:action="@{/sair}" method="get">
         <div>
             <div>
                 <select id="escolha" name="nome">
