--- a/src/main/resources/templates/captcha.html
+++ b/src/main/resources/templates/captcha.html
@@ -5,18 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Captcha</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </head>
 
-<body>
-    <h1>Captcha</h1>
-    <p th:if="${captcha_message}" th:text="${captcha_message}" />
-    <p th:if="${logout}">Você saiu com sucesso!</p>
+<body class="mx-auto">
+    <div class="container">
+        <h1>Captcha</h1>
+        <div class="alert alert-danger" role="alert" th:if="${captcha_message}" th:text="${captcha_message}" />
+        <div class="alert alert-success" role="alert" th:if="${logout}"> Você saiu com sucesso!</div>
 
-    <p th:text="'Digite o codigo: '+${senha}"></p>
-    <form th:action="@{/login}" method="get">
-        <input type="text" id="codigo" name="codigo" placeholder="seu codigo" required /><br />
-        <button class="btn_enviar" type="submit">Enviar</button>
-    </form>
+        <div>
+            <p th:text="'Digite o codigo: '+${senha}" class="form-label"></p>
+            <form th:action="@{/login}" method="get" class="input-group">
+                <input class="form-control" type="text" id="codigo" name="codigo" placeholder="Seu código" required />
+                <button class="btn btn-secondary" type="submit">Enviar</button>
+            </form>
+        </div>
+    </div>
 </body>
 
 </html>
