--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -4,24 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu Dropdown</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="mx-auto">
 
-    <p th:text="'Olá, ' + ${userName} + '!'"></p>
+    <div class="container">
+        <p th:text="'Olá, ' + ${userName} + '!'"></p>
 
-    <form th:action="@{/sair}" method="get">
-        <div>
+        <form th:action="@{/sair}" method="get">
             <div>
-                <select id="escolha" name="nome">
-                    <option th:each="entry : ${dados.entrySet()}" th:value="${entry.key}" th:text="${entry.value}">
-                    </option>
-                </select>
+                <div>
+                    <select id="escolha" name="nome" class="form-select">
+                        <option th:each="entry : ${dados.entrySet()}" th:value="${entry.key}" th:text="${entry.value}">
+                        </option>
+                    </select>
+                </div>
             </div>
-        </div>
-        <button class="btn_enviar" type="submit">Sair</button>
-    </form>
+            <br>
+            <button class="btn btn-secondary" type="submit">Sair</button>
+        </form>
+    </div>
 </body>
 
 </html>
