--- a/src/main/resources/templates/captcha.html
+++ b/src/main/resources/templates/captcha.html
@@ -22,6 +22,26 @@
 </head>
 
 <body class="mx-auto">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">DCC192</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/captcha">Captcha</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <br>
+    </nav>
     <div class="container">
         <h1>Captcha</h1>
         <div class="alert alert-danger" role="alert" th:if="${captcha_message}" th:text="${captcha_message}" />
