--- a/src/main/resources/templates/captcha.html
+++ b/src/main/resources/templates/captcha.html
@@ -42,7 +42,7 @@
         </div>
         <br>
     </nav>
-    <div class="container">
+    <div class="container vh-100 d-flex align-items-center">
         <h1>Captcha</h1>
         <div class="alert alert-danger" role="alert" th:if="${captcha_message}" th:text="${captcha_message}" />
         <div class="alert alert-success" role="alert" th:if="${logout}"> Você saiu com sucesso!</div>
