--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body class="mx-auto">
+<body class="mx-auto bg-dark">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">DCC192</a>
@@ -43,7 +43,8 @@
         <br>
     </nav>
     <div class="container">
-        <h1>Oi!</h1>
+        <br>
+        <h1 class="text-light">Oi!</h1>
     </div>
 </body>
 
