--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body class="mx-auto">
+<body class="mx-auto bg-dark">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">DCC192</a>
@@ -44,11 +44,12 @@
     </nav>
 
     <div class="container">
-        <h1>Formulário de Nome</h1>
 
+        <br>
         <div class="alert alert-success" role="alert" th:if="${captcha_message}" th:text="${captcha_message}" />
 
-        <p for="name" class="form-label">Digite seu nome:</p>
+        <h1 class="text-light">Formulário de Nome</h1>
+        <p for="name" class="form-label text-light">Digite seu nome:</p>
         <form th:action="@{/menu}" method="GET" class="input-group">
             <input type="text" id="name" name="name" class="form-control" required>
             <button class="btn btn-secondary" type="submit">Enviar</button>
