aula 07: botão de voltar

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -61,6 +61,13 @@
             <br>
             <button class="btn btn-secondary" type="submit">Sair</button>
         </form>
+
+        <br>
+
+        <form th:action="@{/info}" method="GET">
+            <button class="btn btn-info" type="submit">Info</button>
+        </form>
+
     </div>
 </body>
 
