--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="pt-BR">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário de Nome</title>
+    <title>Início</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -42,19 +42,14 @@
         </div>
         <br>
     </nav>
-
     <div class="container">
-
         <br>
-        <div class="alert alert-success" role="alert" th:if="${captcha_message}" th:text="${captcha_message}" />
-
-        <h1 class="text-light">Formulário de Nome</h1>
-        <p for="name" class="form-label text-light">Digite seu nome:</p>
-        <form th:action="@{/menu}" method="GET" class="input-group">
-            <input type="text" id="name" name="name" class="form-control" required>
-            <button class="btn btn-secondary" type="submit">Enviar</button>
+        <h1 class="text-light">Info</h1>
+        <p class="text-light">Imagine que tem muito texto aqui.</p>
+        <br>
+        <form th:action="@{/menu}" method="GET">
+            <button class="btn btn-info" type="submit">Info</button>
         </form>
-
     </div>
 </body>
 
