--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -37,11 +37,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/captcha">Captcha</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users">Usuários</a>
+                    </li>
                 </ul>
             </div>
         </div>
         <br>
     </nav>
+    
     <div class="container">
         <br>
         <h1 class="text-light">Info</h1>
