--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/captcha">Captcha</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users">Usuários</a>
+                    </li>
                 </ul>
             </div>
         </div>
