--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Captcha</title>
+    <title>Início</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -45,22 +45,24 @@
         </div>
         <br>
     </nav>
-
     <div class="container">
-
-        <br>
-
-        <div class="alert alert-danger" role="alert" th:if="${captcha_message}" th:text="${captcha_message}" />
-        <div class="alert alert-success" role="alert" th:if="${logout}"> Você saiu com sucesso!</div>
-
-        <h1 class="text-light">Captcha</h1>
-        <div>
-            <p th:text="'Digite o codigo: '+${senha}" class="form-label text-light"></p>
-            <form th:action="@{/login}" method="get" class="input-group">
-                <input class="form-control" type="text" id="codigo" name="codigo" placeholder="Seu código" required />
-                <button class="btn btn-secondary" type="submit">Enviar</button>
-            </form>
-        </div>
+        <h1 class="text-light">Lista de Usuarios</h1>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Login</th>
+                    <th>Senha</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="usuario : ${usuarios}">
+                    <td th:text="${usuario.id}"></td>
+                    <td th:text="${usuario.login}"></td>
+                    <td th:text="${usuario.senha}"></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 
