--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="/captcha">Captcha</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/users">Usuários</a>
+                        <a class="nav-link" href="/usuarios">Usuários</a>
                     </li>
                 </ul>
             </div>
