aula 11: tratamento de exceção

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/captcha">Captcha</a>
                     </li>
-                    
+
                 </ul>
             </div>
         </div>
@@ -47,6 +47,10 @@
     <div class="container">
         <br>
         <h1 class="text-light">Oi!</h1>
+        <p class="text-light">
+            Clique <a href="/erroHtml">aqui</a> para um erro HTML. Clique <a href="/erroJava">aqui</a> para um erro
+            Java.
+        </p>
     </div>
 </body>
 
